# BachelorThesis

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  bound_calculator.cpp  bound_calculator.hpp  changes.cpp  improver.cpp  improver.hpp  machine.cpp  machine.hpp  main.c  main.cpp  object.cpp  object.hpp  problem.cpp  problem.hpp  problem.pbl  process.cpp  process.hpp  project.pro  scheduler.cpp  scheduler.hpp  tempstorage.cpp  tempstorage.hpp
problem_generator/: Makefile  main.cpp  process_creator.cpp  process_creator.hpp
src/: bound_calculator.cpp  bound_calculator.h  bound_calculator_main.cpp  enums.h  improver.cpp  improver.h  improver_main.cpp  machine.cpp  machine.h  main.cpp  object.cpp  object.h  problem.cpp  problem.h  process.cpp  process.h  scheduler.cpp  scheduler.h  start_solution_tester_main.cpp  tempstorage.cpp  tempstorage.h
